# CuteC

./: CMakeLists.txt  README.md
source/: AsmTree.h  Ast.h  AstPrinter.h  CodeEmitter.cpp  CodeEmitter.h  Codegen.cpp  Codegen.h  Compiler.h  IR.h  IRGenerator.cpp  IRGenerator.h  IRPrinter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h  main.cpp  overloaded.h
source/analysis/: LabelResolutionPass.cpp  LabelResolutionPass.h  LoopLabelingPass.cpp  LoopLabelingPass.h  SwitchResolutionPass.cpp  SwitchResolutionPass.h  TypeCheckerPass.cpp  TypeCheckerPass.h  VariableResolutionPass.cpp  VariableResolutionPass.h
source/common/: box.h
tests/: complement_negate.c  return2.c
